--- a/RustFileExplorer/src-tauri/Cargo.toml
+++ b/RustFileExplorer/src-tauri/Cargo.toml
@@ -22,4 +22,6 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-
+rayon = "1.8"
+ignore = "0.4"
+parking_lot = "0.12"
